style: reduce section padding to fix excessive whitespace above headings

--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ h4 {
 
 /* General Section Styles */
 section {
-  padding: 7rem 5%;
+  padding: 4rem 5%;
   position: relative;
 }
 
